// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChatInterface matches snapshot in empty state 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-r border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="History"
          aria-pressed="true"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 bg-gold/15 text-gold border border-gold/30"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 3h16v11H6l-4 3V3z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      />
    </div>
    <div
      class="h-full bg-charcoal/50 flex flex-col relative shrink-0 border-r border-ash/40"
      style="width: 25vw;"
    >
      <div
        class="absolute top-0 w-1 h-full cursor-col-resize z-30 hover:bg-gold/50 transition-colors right-0 after:absolute after:inset-y-0 after:-right-1 after:w-2"
      />
      <div
        class="min-h-0 overflow-hidden flex flex-col"
        style="flex: 1 1 0%;"
      >
        <div
          class="h-full flex flex-col"
        >
          <div
            class="px-4 py-3 border-b border-ash/40 shrink-0 flex items-center gap-2"
          >
            <h3
              class="text-xs font-medium text-white shrink-0"
            >
              History
            </h3>
            <div
              class="flex items-center gap-2 flex-1 min-w-0"
            >
              <div
                class="w-px h-3 bg-ash/40 shrink-0 mx-1"
              />
              <div
                class="relative min-w-0 flex-1"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full flex items-center justify-between gap-1 px-2 py-1.5 bg-obsidian/60 hover:bg-ash/30 text-silver hover:text-white border border-ash/40 text-xs transition-colors duration-150 min-w-0"
                  type="button"
                >
                  <span
                    class="truncate"
                  >
                    All projects
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down w-3 h-3 shrink-0"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex-1 overflow-y-auto py-2"
          >
            <div>
              <section
                class=""
              >
                <div
                  class="flex items-center gap-2 px-3 pb-2"
                >
                  <span
                    class="text-xs font-medium uppercase tracking-wider text-gold/70"
                  >
                    Older
                  </span>
                  <div
                    class="flex-1 h-px bg-gold/20"
                  />
                </div>
                <div
                  class="space-y-1 px-2"
                >
                  <div
                    class="relative group"
                  >
                    <button
                      class="w-full px-3 py-2 text-left transition-colors duration-150 bg-ash/40 text-white"
                    >
                      <p
                        class="text-sm font-medium truncate"
                      >
                        Conversation 1
                      </p>
                      <p
                        class="text-xs text-silver/60 truncate mt-0.5"
                      >
                        Alpha
                      </p>
                    </button>
                  </div>
                  <div
                    class="relative group"
                  >
                    <button
                      class="w-full px-3 py-2 text-left transition-colors duration-150 text-silver hover:bg-ash/20 hover:text-white"
                    >
                      <p
                        class="text-sm font-medium truncate"
                      >
                        Conversation 2
                      </p>
                      <p
                        class="text-xs text-silver/60 truncate mt-0.5"
                      >
                        Beta
                      </p>
                    </button>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative justify-center"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-1"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-zero opacity-0"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            />
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full flex flex-col items-center p-4"
        >
          <div
            class="mb-8 text-center animate-fade-in duration-500"
          >
            <h1
              class="text-4xl md:text-5xl font-heading text-gold mb-2 tracking-tight"
            >
              Welcome!
            </h1>
          </div>
          <div
            class="w-full flex flex-col items-center justify-center transition-all duration-300 ease-out"
          >
            <p
              class="text-silver text-sm mb-4 text-center"
            >
              Type to begin
            </p>
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200 max-w-lg"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Send message"
                  class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-send w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                    />
                    <path
                      d="m21.854 2.147-10.94 10.939"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-1"
        />
      </div>
    </div>
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-l border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Artifacts"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2 4.5A1.5 1.5 0 013.5 3h13A1.5 1.5 0 0118 4.5v11a1.5 1.5 0 01-1.5 1.5h-13A1.5 1.5 0 012 15.5v-11zM4 5v1h1V5H4zm2 0v1h1V5H6zm7 0v1h1V5h-1zm2 0v1h1V5h-1zM4 14v1h1v-1H4zm2 0v1h1v-1H6zm7 0v1h1v-1h-1zm2 0v1h1v-1h-1zM8 8.118a.5.5 0 01.757-.429l4 2.382a.5.5 0 010 .858l-4 2.382A.5.5 0 018 12.882V8.118z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Tasks"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <div
              class="relative w-4 h-4 flex-shrink-0 border-2 border-gold bg-gold/10"
            >
              <svg
                class="absolute inset-0 w-full h-full p-0.5"
                fill="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="text-gold"
                  d="M3 8l3 3 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInterface matches snapshot while streaming 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-r border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="History"
          aria-pressed="true"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 bg-gold/15 text-gold border border-gold/30"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 3h16v11H6l-4 3V3z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      />
    </div>
    <div
      class="h-full bg-charcoal/50 flex flex-col relative shrink-0 border-r border-ash/40"
      style="width: 25vw;"
    >
      <div
        class="absolute top-0 w-1 h-full cursor-col-resize z-30 hover:bg-gold/50 transition-colors right-0 after:absolute after:inset-y-0 after:-right-1 after:w-2"
      />
      <div
        class="min-h-0 overflow-hidden flex flex-col"
        style="flex: 1 1 0%;"
      >
        <div
          class="h-full flex flex-col"
        >
          <div
            class="px-4 py-3 border-b border-ash/40 shrink-0 flex items-center gap-2"
          >
            <h3
              class="text-xs font-medium text-white shrink-0"
            >
              History
            </h3>
          </div>
          <div
            class="flex-1 overflow-y-auto py-2"
          >
            <p
              class="px-4 py-2 text-xs text-silver/60"
            >
              No conversations yet
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative justify-start"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-1 opacity-100"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            >
              <div
                class="scroll-mt-4"
              >
                <div
                  class="flex flex-col items-end"
                >
                  <div
                    aria-label="Jump to this message"
                    class="px-3 py-2 w-fit max-w-11/12 bg-gold text-obsidian ml-auto cursor-pointer hover:brightness-110 transition-all duration-150"
                    role="button"
                  >
                    <div
                      class="prose prose-sm prose-inherit"
                    >
                      <p>
                        Hello!
                      </p>
                      

                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 mr-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-copy w-3.5 h-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class=""
              >
                <div
                  class="flex flex-col items-start"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-charcoal border border-ash text-white mr-auto"
                  >
                    <div
                      class="prose prose-sm prose-invert"
                    >
                      <p>
                        Hi there!
                        <span
                          aria-hidden="true"
                          class="inline-block bg-current animate-cursor-blink w-0.5 h-cursor translate-y-cursor-offset ml-0.5"
                        />
                      </p>
                      

                    </div>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full flex flex-col items-center shrink-0 p-4 border-t border-ash/40 bg-obsidian"
        >
          <div
            class="w-full transition-all duration-300 ease-out"
          >
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12 opacity-50 cursor-not-allowed"
                  disabled=""
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Stop generation"
                  class="absolute right-2 bottom-2 p-2 text-error hover:bg-error/10 transition-colors duration-200"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-square w-5 h-5 fill-current"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <rect
                      height="18"
                      rx="2"
                      width="18"
                      x="3"
                      y="3"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
      </div>
    </div>
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-l border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Artifacts"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2 4.5A1.5 1.5 0 013.5 3h13A1.5 1.5 0 0118 4.5v11a1.5 1.5 0 01-1.5 1.5h-13A1.5 1.5 0 012 15.5v-11zM4 5v1h1V5H4zm2 0v1h1V5H6zm7 0v1h1V5h-1zm2 0v1h1V5h-1zM4 14v1h1v-1H4zm2 0v1h1v-1H6zm7 0v1h1v-1h-1zm2 0v1h1v-1h-1zM8 8.118a.5.5 0 01.757-.429l4 2.382a.5.5 0 010 .858l-4 2.382A.5.5 0 018 12.882V8.118z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Tasks"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <div
              class="relative w-4 h-4 flex-shrink-0 border-2 border-gold bg-gold/10"
            >
              <svg
                class="absolute inset-0 w-full h-full p-0.5"
                fill="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="text-gold"
                  d="M3 8l3 3 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`ChatInterface matches snapshot with messages 1`] = `
<div>
  <div
    class="flex h-full w-full bg-obsidian overflow-hidden"
  >
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-r border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="History"
          aria-pressed="true"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 bg-gold/15 text-gold border border-gold/30"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M2 3h16v11H6l-4 3V3z"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      />
    </div>
    <div
      class="h-full bg-charcoal/50 flex flex-col relative shrink-0 border-r border-ash/40"
      style="width: 25vw;"
    >
      <div
        class="absolute top-0 w-1 h-full cursor-col-resize z-30 hover:bg-gold/50 transition-colors right-0 after:absolute after:inset-y-0 after:-right-1 after:w-2"
      />
      <div
        class="min-h-0 overflow-hidden flex flex-col"
        style="flex: 1 1 0%;"
      >
        <div
          class="h-full flex flex-col"
        >
          <div
            class="px-4 py-3 border-b border-ash/40 shrink-0 flex items-center gap-2"
          >
            <h3
              class="text-xs font-medium text-white shrink-0"
            >
              History
            </h3>
            <div
              class="flex items-center gap-2 flex-1 min-w-0"
            >
              <div
                class="w-px h-3 bg-ash/40 shrink-0 mx-1"
              />
              <div
                class="relative min-w-0 flex-1"
              >
                <button
                  aria-expanded="false"
                  aria-haspopup="listbox"
                  class="w-full flex items-center justify-between gap-1 px-2 py-1.5 bg-obsidian/60 hover:bg-ash/30 text-silver hover:text-white border border-ash/40 text-xs transition-colors duration-150 min-w-0"
                  type="button"
                >
                  <span
                    class="truncate"
                  >
                    All projects
                  </span>
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-chevron-down w-3 h-3 shrink-0"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m6 9 6 6 6-6"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex-1 overflow-y-auto py-2"
          >
            <div>
              <section
                class=""
              >
                <div
                  class="flex items-center gap-2 px-3 pb-2"
                >
                  <span
                    class="text-xs font-medium uppercase tracking-wider text-gold/70"
                  >
                    Older
                  </span>
                  <div
                    class="flex-1 h-px bg-gold/20"
                  />
                </div>
                <div
                  class="space-y-1 px-2"
                >
                  <div
                    class="relative group"
                  >
                    <button
                      class="w-full px-3 py-2 text-left transition-colors duration-150 bg-ash/40 text-white"
                    >
                      <p
                        class="text-sm font-medium truncate"
                      >
                        Conversation 1
                      </p>
                      <p
                        class="text-xs text-silver/60 truncate mt-0.5"
                      >
                        Alpha
                      </p>
                    </button>
                  </div>
                  <div
                    class="relative group"
                  >
                    <button
                      class="w-full px-3 py-2 text-left transition-colors duration-150 text-silver hover:bg-ash/20 hover:text-white"
                    >
                      <p
                        class="text-sm font-medium truncate"
                      >
                        Conversation 2
                      </p>
                      <p
                        class="text-xs text-silver/60 truncate mt-0.5"
                      >
                        Beta
                      </p>
                    </button>
                  </div>
                </div>
              </section>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="flex-1 flex flex-col min-w-0 relative"
    >
      <div
        class="flex-1 flex flex-col min-h-0 relative justify-start"
      >
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
        <div
          class="transition-all duration-500 ease-in-out overflow-hidden flex flex-col flex-1 opacity-100"
        >
          <div
            class="flex flex-col w-full h-full overflow-y-auto scroll-smooth px-4 py-6 overscroll-contain flex-1"
          >
            <div
              class="relative flex flex-col gap-3"
            >
              <div
                class="scroll-mt-4"
              >
                <div
                  class="flex flex-col items-end"
                >
                  <div
                    aria-label="Jump to this message"
                    class="px-3 py-2 w-fit max-w-11/12 bg-gold text-obsidian ml-auto cursor-pointer hover:brightness-110 transition-all duration-150"
                    role="button"
                  >
                    <div
                      class="prose prose-sm prose-inherit"
                    >
                      <p>
                        Hello!
                      </p>
                      

                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 mr-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-copy w-3.5 h-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
              <div
                class=""
              >
                <div
                  class="flex flex-col items-start"
                >
                  <div
                    class="px-3 py-2 w-fit max-w-11/12 bg-charcoal border border-ash text-white mr-auto"
                  >
                    <div
                      class="prose prose-sm prose-invert"
                    >
                      <p>
                        Hi there!
                      </p>
                      

                    </div>
                  </div>
                  <div
                    class="flex items-center gap-0.5 mt-1 ml-1"
                  >
                    <button
                      aria-label="Copy message"
                      class="p-1.5 text-silver/60 hover:text-silver transition-colors duration-150 hover:bg-white/5 disabled:opacity-50 disabled:cursor-not-allowed disabled:hover:bg-transparent"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-copy w-3.5 h-3.5"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <rect
                          height="14"
                          rx="2"
                          ry="2"
                          width="14"
                          x="8"
                          y="8"
                        />
                        <path
                          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              aria-hidden="true"
              class="shrink-0 pointer-events-none"
              style="height: 0px;"
            />
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out z-10 w-full flex flex-col items-center shrink-0 p-4 border-t border-ash/40 bg-obsidian"
        >
          <div
            class="w-full transition-all duration-300 ease-out"
          >
            <div
              class="relative w-full bg-charcoal border border-ash/60 focus-within:border-gold/60 focus-within:ring-1 focus-within:ring-gold/20 transition-colors duration-200"
            >
              <div
                class="flex items-end"
              >
                <button
                  aria-label="Attach file"
                  class="p-3 text-silver/60 hover:text-silver transition-colors disabled:opacity-50 disabled:cursor-not-allowed"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-paperclip w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m16 6-8.414 8.586a2 2 0 0 0 2.829 2.829l8.414-8.586a4 4 0 1 0-5.657-5.657l-8.379 8.551a6 6 0 1 0 8.485 8.485l8.379-8.551"
                    />
                  </svg>
                </button>
                <input
                  aria-hidden="true"
                  class="hidden"
                  multiple=""
                  type="file"
                />
                <textarea
                  class="flex-1 bg-transparent text-white placeholder:text-silver/60 py-3 pr-12 resize-none outline-none min-h-12"
                  placeholder="Send a message..."
                  rows="1"
                  style="max-height: 200px;"
                />
                <button
                  aria-label="Send message"
                  class="absolute right-2 bottom-2 p-2 transition-colors duration-200 text-silver/40 cursor-not-allowed"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="lucide lucide-send w-5 h-5"
                    fill="none"
                    height="24"
                    stroke="currentColor"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    width="24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14.536 21.686a.5.5 0 0 0 .937-.024l6.5-19a.496.496 0 0 0-.635-.635l-19 6.5a.5.5 0 0 0-.024.937l7.93 3.18a2 2 0 0 1 1.112 1.11z"
                    />
                    <path
                      d="m21.854 2.147-10.94 10.939"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="transition-all duration-500 ease-in-out flex-zero"
        />
      </div>
    </div>
    <div
      class="h-full w-9 bg-charcoal/80 flex flex-col items-center shrink-0 py-2 border-l border-ash/40"
    >
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Artifacts"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <svg
              fill="currentColor"
              viewBox="0 0 20 20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                clip-rule="evenodd"
                d="M2 4.5A1.5 1.5 0 013.5 3h13A1.5 1.5 0 0118 4.5v11a1.5 1.5 0 01-1.5 1.5h-13A1.5 1.5 0 012 15.5v-11zM4 5v1h1V5H4zm2 0v1h1V5H6zm7 0v1h1V5h-1zm2 0v1h1V5h-1zM4 14v1h1v-1H4zm2 0v1h1v-1H6zm7 0v1h1v-1h-1zm2 0v1h1v-1h-1zM8 8.118a.5.5 0 01.757-.429l4 2.382a.5.5 0 010 .858l-4 2.382A.5.5 0 018 12.882V8.118z"
                fill-rule="evenodd"
              />
            </svg>
          </span>
        </button>
      </div>
      <div
        class="flex-1 flex items-center justify-center"
      >
        <div
          class="w-5 border-t border-ash/30"
        />
      </div>
      <div
        class="flex flex-col items-center gap-1"
      >
        <button
          aria-label="Tasks"
          aria-pressed="false"
          class="w-8 h-8 flex items-center justify-center transition-colors duration-150 text-silver hover:text-white hover:bg-ash/20"
        >
          <span
            class="w-4 h-4 block"
          >
            <div
              class="relative w-4 h-4 flex-shrink-0 border-2 border-gold bg-gold/10"
            >
              <svg
                class="absolute inset-0 w-full h-full p-0.5"
                fill="none"
                viewBox="0 0 16 16"
              >
                <path
                  class="text-gold"
                  d="M3 8l3 3 7-7"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                />
              </svg>
            </div>
          </span>
        </button>
      </div>
    </div>
  </div>
</div>
`;
